src/test/ui/issues/issue-47511.stderr
error[E0581]: return type references an anonymous lifetime, which is not constrained by the fn input types
  --> $DIR/issue-47511.rs:8:15
   |
LL | fn f(_: X) -> X {
   |               ^
   |
   = note: lifetimes appearing in an associated or opaque type are not considered constrained
   = note: consider introducing a named lifetime parameter

error[E0581]: return type references lifetime `'a`, which is not constrained by the fn input types
  --> $DIR/issue-47511.rs:12:23
   |
LL | fn g<'a>(_: X<'a>) -> X<'a> {
   |                       ^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0581`.
